<resources>
    <string name="app_name">Faro10</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="connection_title">No Internet connection</string>
    <string name="connection_not_available">It seems that you are not connected to the Internet. Kindly check your network settings.</string>
    <string name="location_title">Location Service disabled</string>
    <string name="location_msg">Please enable location service. Location is mandatory to use this application.</string>
    <string name="btn_enable">Enable</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_settings">Settings</string>
    <string name="connected">Connected&#8230;</string>
    <string name="retrying">Retrying&#8230; %s</string>
    <string name="btn_ok">OK</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="or">OR</string>
    <string name="skip_login">Skip Login</string>
    <string name="btn_signup">Sign up</string>
    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_company">Company Name</string>
    <string name="hint_business">Business Type</string>
    <string name="hint_country">Country</string>
    <string name="btn_swt_seller">SWITCH TO SELLER MODE</string>
    <string name="btn_swt_buyer">SWITCH TO BUYER MODE</string>
    <string name="lab_shape">Shape</string>
    <string name="lab_size">Size</string>
    <string name="lab_color">Color</string>
    <string name="hint_intensity">Intensity</string>
    <string name="hint_overtone">Overtone</string>
    <string name="hint_color">Color</string>
    <string name="color_white">White</string>
    <string name="color_fancy">Fancy</string>

    <string name="err_name">Enter Name</string>
    <string name="err_choose_user">Select user</string>
    <string name="err_drug_name">Enter Drug Name</string>
    <string name="err_dosage">Enter Dosage</string>
    <string name="err_select_date">Select Date</string>

    <string name="err_signature">Signature Required</string>

    <string name="err_relationship">Enter Relationship</string>
    <string name="err_email">Enter email address</string>
    <string name="err_valid_email">Please enter valid email address</string>
    <string name="enter_email">Please enter email address</string>
    <string name="err_time_taken">Please select number of times medicine was taken to update.</string>
    <string name="err_select">Please select Physical Symptoms.</string>
    <string name="err_email_invalid">Please enter valid email address</string>
    <string name="err_password">Enter password</string>
    <string name="err_date">Select Date</string>
    <string name="err_journal">Please fill all details</string>
    <string name="err_reminder">Please fill data</string>
    <string name="err_symptom">Please select data</string>
    <string name="err_disclaimer">Please read legal disclaimer</string>
    <string name="err_mood">Please add select your mood</string>
    <string name="err_minute">Enter Minutes</string>
    <string name="err_nationality">Enter Nationality</string>
    <string name="err_gender">Please select gender</string>
    <string name="err_zipcode">Please enter Minimum 5 digit zip code</string>
    <string name="err_zipcodes">Please enter Maximum 6 digit zip code</string>
    <string name="err_conf_password">Confirm password</string>
    <string name="err_password_limit">Password must be at least 8 characters long</string>
    <!--<string name="invalid_password">It should be, Minimum 8 and Maximum 15 characters at least 1 Uppercase Alphabet, 1 Lowercase Alphabet, 1 Number and 1 Special Character</string>-->
    <string name="invalid_password">It should be, Minimum 8 and Maximum 15 characters and at least 1 Uppercase Alphabet, 1 Lowercase Alphabet, 1 Number and 1 Special Character</string>
    <string name="err_password_match">Password does not match</string>
    <string name="failed">Failed</string>
    <string name="hint_username">Email Address</string>
    <string name="hint_clarity">Clarity</string>
    <string name="hint_cut">Cut</string>
    <string name="hint_polish">Polish</string>
    <string name="hint_symmetry">Symmetry</string>
    <string name="hint_lab">Lab</string>
    <string name="exit_msg">Press Back twice to exit</string>
    <string name="err_firstname">Username is required</string>
    <string name="err_Weight">Enter weight atleast minimum 1 digit</string>
    <string name="err_Weights">Enter weight maximum 4 digit</string>
    <string name="err_lastname">Enter LastName</string>
    <string name="err_company_name">Enter Company Name</string>
    <string name="err_busine_type">Select business type</string>
    <string name="err_country">Select Country</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="hint_search_company">Search By Company</string>
    <string name="hint_fluorescence">Fluorescence</string>
    <string name="rap">Rap ($)</string>
    <string name="target_price">Target Price ($)</string>
    <string name="discount">Discount %</string>
    <string name="per_carat">$/Crt</string>
    <string name="total_price">Total Price ($)</string>
    <string name="color_">Color :</string>
    <string name="head_total">Total</string>
    <string name="loading">Loading...</string>
    <string name="head_total_crt">Total Crt</string>
    <string name="head_avg_crt">Avg Rap $/Crt</string>
    <string name="head_avg_price_crt">Avg $/Crt</string>
    <string name="head_total_price">Total $</string>
    <string name="menu_home">Home</string>
    <string name="logout_title">Logout</string>
    <string name="logout_msg">Are you sure want to logout?</string>
    <string name="prisc_delete_msg">Are you sure want to delete this Prescription?</string>
    <string name="msg_delete">Are you sure want to delete this message?</string>
    <string name="msg_reminder">Are you sure want to delete this reminder?</string>
    <string name="msg_delete_clinician">Are you sure want to delete this clinician?</string>
    <string name="obs_delete">Are you sure want to delete this observer?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="dt_shape">Shape</string>
    <string name="dt_table">Table (%)</string>
    <string name="dash">-</string>
    <string name="menu_myconnection">My Connections</string>
    <string name="btn_delete">Delete</string>
    <string name="hint_search">Search</string>
    <string name="hint_group">Group</string>
    <string name="title_contacts">Contacts</string>
    <string name="head_selected">Selected</string>
    <string name="removed">Removed</string>
    <string name="menu_contact_req">Contact Requests</string>
    <string name="tab_req_pending">Pending</string>
    <string name="tab_req_sent">Sent</string>
    <string name="tab_req_blocked">Blocked</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_block">Block</string>
    <string name="btn_reject">Reject</string>
    <string name="btn_search_stock">Search Stock</string>
    <string name="done">Done</string>
    <string name="are_sure">Are you sure?</string>
    <string name="confirm">Confirm</string>
    <string name="btn_send_request">Send Request</string>
    <string name="remember_me">REMEMBER ME</string>
    <string name="sign_in">sign in</string>
    <string name="search">search</string>
    <string name="success">Success</string>

    <string name="choose_country">choose country</string>
    <string name="choose_timezone">choose TimeZone</string>
    <string name="symptoms_side_effects"><![CDATA[Symptoms & Side Effects]]></string>
    <string name="physical_symptoms">Physical Symptoms</string>
    <string name="str_register">REGISTER</string>
    <string name="chemical_name">Chemical Name</string>
    <string name="drug_name">Drug Name</string>
    <string name="select_date">Select Date</string>
    <string name="side_effects"><![CDATA[Symptoms & side effects help]]></string>

</resources>
