<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="30dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:src="@mipmap/logo" />

            <com.common.view.CTextView
                android:id="@+id/CTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="Hello"
                android:textColor="@color/primaryDark"
                android:textSize="35dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@color/white" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="0px"
                        android:layout_height="0px"
                        android:focusable="true"
                        android:focusableInTouchMode="true" />

                    <!--<android.support.design.widget.TextInputLayout-->
                    <!--style="@style/TextAppearence.App.TextInputLayout_"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--app:hintAnimationEnabled="true"-->
                    <!--app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout_">-->

                    <!--<com.common.view.CEditTextView-->
                    <!--android:id="@+id/editLoginEmail"-->
                    <!--style="@style/txt_333_16"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:background="@drawable/edittext_bg"-->
                    <!--android:drawableLeft="@drawable/ic_person_black_24dp"-->
                    <!--android:drawablePadding="10dp"-->
                    <!--android:hint="@string/hint_username"-->
                    <!--android:inputType="text"-->
                    <!--android:padding="5dp"-->
                    <!--android:singleLine="true"-->
                    <!--android:textCursorDrawable="@null" />-->
                    <!--</android.support.design.widget.TextInputLayout>-->

                    <android.support.design.widget.TextInputLayout
                        style="@style/TextAppearence.App.TextInputLayout_"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintAnimationEnabled="true"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout_">

                        <com.common.view.CEditTextView
                            android:id="@+id/editLoginEmail"
                            style="@style/txt_333_16"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittext_bg"
                            android:drawableLeft="@drawable/ic_person_black_24dp"
                            android:drawablePadding="10dp"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress|textNoSuggestions"
                            android:padding="5dp"
                            android:singleLine="true"
                            android:textCursorDrawable="@null" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        style="@style/TextAppearence.App.TextInputLayout_"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:hintAnimationEnabled="true"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout_">

                        <com.common.view.CEditTextView
                            android:id="@+id/editLoginPass"
                            style="@style/txt_333_16"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/edittext_bg"
                            android:drawableLeft="@drawable/ic_https_black_24dp"
                            android:drawablePadding="10dp"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword"
                            android:padding="5dp"
                            android:singleLine="true"
                            android:textCursorDrawable="@null" />
                    </android.support.design.widget.TextInputLayout>

                    <com.common.view.CBButtonViewM
                        android:id="@+id/btnLogin"
                        style="@style/LightFlatWaveColorButtonRippleStyle_"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/btn_bg_"
                        android:text="@string/sign_in"
                        android:textColor="#FFFFFF" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/chkRememberMe"
                            style="@style/txt_000_14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/remember_me" />

                        <com.common.view.CTextView
                            android:id="@+id/tvRegister"
                            style="@style/txt_accent_14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="@string/str_register" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="25dp">

                        <com.common.view.CTextView
                            android:id="@+id/tvForgotPass"
                            style="@style/txt_accent_14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:singleLine="true"
                            android:text="FORGOT YOUR PASSWORD?" />

                    </LinearLayout>

                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <View
                android:layout_width="0dp"
                android:layout_height="1px"
                android:layout_weight="1"
                android:background="@color/col_666" />

            <com.common.view.CTextView
                style="@style/txt_666_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:text="@string/or" />

            <View
                android:layout_width="0dp"
                android:layout_height="1px"
                android:layout_weight="1"
                android:background="@color/col_666" />
        </LinearLayout>

        <com.common.view.CTextView
            style="@style/txt_theme_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/skip_login"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>